# suiveur

./: CMakeLists.txt  LICENSE  README.md
include/suiveur/: suiveur.hpp
include/suiveur/detail/: allocation_registry.cpp  allocation_registry.hpp  ansi_color.hpp  cttypeid.hpp  load_file.cpp  load_file.hpp  pad_with.cpp  pad_with.hpp  partition_data.cpp  partition_data.hpp  type_names.cpp  type_names.hpp
